--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "rm -rf docs ; npm run build ; mv dist docs ; git add docs ; git commit -m 'Update GH Pages version' ; git push"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
